# ts_force_generator

./: LICENSE  README.md
example/: lenz_parallel_implicit.xml  lenz_serial_explicit.xml  preciceClean
example/ccx/: ccx.inp  ccxMesh.inp  config.yml
example/ccx_rigid/: ccx.inp  config.yml
example/ts_dummy_adapter/: config.yaml
example/ts_rigid/: lenz.mesh  rbdAdapter.yaml  settingsRigid.yaml
inputs/: inputDumyAdapter.csv
ode_solver/: ode_solver.py
ode_solver/src/: ForceGenerator.cpp  ForceGenerator.hpp  Settings.hpp
src/: CMakeLists.txt  CSVParser.hpp  ForceGenerator.cpp  ForceGenerator.hpp  main.cpp  types.hpp
src/yaml/: Settings.cpp  Settings.hpp  parse.cpp  parse.hpp
